--- a/Pitch/Storyboards/EventDetails.storyboard
+++ b/Pitch/Storyboards/EventDetails.storyboard
@@ -18,63 +18,107 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbG-d9-6Zp">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2jH-61-mET" userLabel="ClickableMapViewOutlet">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lm5-WC-XOP">
+                                <rect key="frame" x="0.0" y="50" width="414" height="50"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qJ0-uT-ZIL" userLabel="SwipeIndicatorOutlet">
+                                        <rect key="frame" x="192" y="8" width="30" height="7"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="7" id="Tay-aS-f1W"/>
+                                            <constraint firstAttribute="width" constant="30" id="g6n-yS-hoV"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfi-ss-WHh">
+                                        <rect key="frame" x="154.5" y="19" width="105" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="qJ0-uT-ZIL" firstAttribute="centerX" secondItem="lm5-WC-XOP" secondAttribute="centerX" id="TfJ-Yk-6VC"/>
+                                    <constraint firstItem="qJ0-uT-ZIL" firstAttribute="top" secondItem="3eY-M1-iWJ" secondAttribute="top" constant="8" id="bPa-HY-j6G"/>
+                                    <constraint firstItem="sfi-ss-WHh" firstAttribute="centerX" secondItem="lm5-WC-XOP" secondAttribute="centerX" id="niX-Xn-kUc"/>
+                                    <constraint firstItem="sfi-ss-WHh" firstAttribute="top" secondItem="qJ0-uT-ZIL" secondAttribute="bottom" constant="4" id="nnN-I6-76N"/>
+                                </constraints>
+                                <viewLayoutGuide key="safeArea" id="3eY-M1-iWJ"/>
+                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbG-d9-6Zp">
+                                <rect key="frame" x="0.0" y="100" width="414" height="747"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ebe-Te-dUN">
-                                        <rect key="frame" x="0.0" y="50" width="414" height="848"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="747"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uCL-QH-B4w">
-                                                <rect key="frame" x="178.5" y="69" width="57" height="30"/>
+                                                <rect key="frame" x="178.5" y="93" width="57" height="30"/>
                                                 <state key="normal" title="Register"/>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qkZ-d4-XFr">
-                                                <rect key="frame" x="186" y="792" width="42" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Middle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3v-eG-gDL">
+                                                <rect key="frame" x="181" y="392" width="52" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MiIddle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3v-eG-gDL">
-                                                <rect key="frame" x="179" y="392" width="56" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bottom" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4F-W9-BgF">
+                                                <rect key="frame" x="179" y="691" width="56" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="uCL-QH-B4w" firstAttribute="centerX" secondItem="ebe-Te-dUN" secondAttribute="centerX" id="DSU-rK-Jqy"/>
-                                            <constraint firstItem="qkZ-d4-XFr" firstAttribute="top" secondItem="j3v-eG-gDL" secondAttribute="bottom" constant="379" id="J6U-Yb-FRk"/>
-                                            <constraint firstItem="uCL-QH-B4w" firstAttribute="top" secondItem="ebe-Te-dUN" secondAttribute="top" constant="69" id="L4c-rL-PR8"/>
+                                            <constraint firstItem="Q4F-W9-BgF" firstAttribute="centerX" secondItem="ebe-Te-dUN" secondAttribute="centerX" id="KMC-Vv-GQF"/>
+                                            <constraint firstItem="uCL-QH-B4w" firstAttribute="top" secondItem="ebe-Te-dUN" secondAttribute="top" constant="93" id="L4c-rL-PR8"/>
                                             <constraint firstItem="j3v-eG-gDL" firstAttribute="centerX" secondItem="ebe-Te-dUN" secondAttribute="centerX" id="M12-gN-s8X"/>
-                                            <constraint firstAttribute="bottom" secondItem="qkZ-d4-XFr" secondAttribute="bottom" constant="35" id="Yz6-lB-KkC"/>
-                                            <constraint firstItem="j3v-eG-gDL" firstAttribute="top" secondItem="uCL-QH-B4w" secondAttribute="bottom" constant="293" id="fMc-3l-xYk"/>
-                                            <constraint firstItem="qkZ-d4-XFr" firstAttribute="centerX" secondItem="ebe-Te-dUN" secondAttribute="centerX" id="nVf-3Y-Mdc"/>
+                                            <constraint firstItem="j3v-eG-gDL" firstAttribute="top" secondItem="uCL-QH-B4w" secondAttribute="bottom" constant="269" id="fMc-3l-xYk"/>
+                                            <constraint firstItem="Q4F-W9-BgF" firstAttribute="top" secondItem="j3v-eG-gDL" secondAttribute="bottom" constant="278" id="sP9-tZ-GOO"/>
+                                            <constraint firstAttribute="bottom" secondItem="Q4F-W9-BgF" secondAttribute="bottom" constant="35" id="wmQ-dN-Gcp"/>
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="ebe-Te-dUN" firstAttribute="width" secondItem="zbG-d9-6Zp" secondAttribute="width" id="0EZ-ov-msW"/>
-                                    <constraint firstAttribute="bottom" secondItem="ebe-Te-dUN" secondAttribute="bottom" constant="-2" id="4Al-5J-ZkB"/>
+                                    <constraint firstAttribute="bottom" secondItem="ebe-Te-dUN" secondAttribute="bottom" id="4Al-5J-ZkB"/>
                                     <constraint firstAttribute="trailing" secondItem="ebe-Te-dUN" secondAttribute="trailing" id="MhC-hp-ITX"/>
                                     <constraint firstItem="ebe-Te-dUN" firstAttribute="leading" secondItem="zbG-d9-6Zp" secondAttribute="leading" id="Q8l-lg-xZX"/>
-                                    <constraint firstItem="ebe-Te-dUN" firstAttribute="height" secondItem="zbG-d9-6Zp" secondAttribute="height" priority="250" constant="-48" id="daQ-he-hFp"/>
-                                    <constraint firstItem="ebe-Te-dUN" firstAttribute="top" secondItem="zbG-d9-6Zp" secondAttribute="top" constant="50" id="nCr-MQ-orL"/>
+                                    <constraint firstItem="ebe-Te-dUN" firstAttribute="height" secondItem="zbG-d9-6Zp" secondAttribute="height" priority="250" id="daQ-he-hFp"/>
+                                    <constraint firstItem="ebe-Te-dUN" firstAttribute="top" secondItem="zbG-d9-6Zp" secondAttribute="top" id="nCr-MQ-orL"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="cpc-Ku-ued" firstAttribute="top" secondItem="zbG-d9-6Zp" secondAttribute="top" constant="20" id="1b2-kv-7u0"/>
+                            <constraint firstItem="lm5-WC-XOP" firstAttribute="top" secondItem="2jH-61-mET" secondAttribute="bottom" id="1KT-Cm-wPQ"/>
+                            <constraint firstItem="cpc-Ku-ued" firstAttribute="top" secondItem="zbG-d9-6Zp" secondAttribute="top" constant="-80" id="1b2-kv-7u0"/>
                             <constraint firstItem="cpc-Ku-ued" firstAttribute="trailing" secondItem="zbG-d9-6Zp" secondAttribute="trailing" id="6t6-4V-aOr"/>
-                            <constraint firstItem="cpc-Ku-ued" firstAttribute="bottom" secondItem="zbG-d9-6Zp" secondAttribute="bottom" constant="-49" id="Bwr-zy-7Oe"/>
+                            <constraint firstAttribute="trailing" secondItem="lm5-WC-XOP" secondAttribute="trailing" id="Bdh-4a-rAp"/>
+                            <constraint firstItem="cpc-Ku-ued" firstAttribute="bottom" secondItem="zbG-d9-6Zp" secondAttribute="bottom" id="Bwr-zy-7Oe"/>
+                            <constraint firstItem="lm5-WC-XOP" firstAttribute="leading" secondItem="Lmm-er-96k" secondAttribute="leading" id="KYd-1G-nae"/>
                             <constraint firstItem="zbG-d9-6Zp" firstAttribute="leading" secondItem="cpc-Ku-ued" secondAttribute="leading" id="P35-gy-V2z"/>
+                            <constraint firstItem="2jH-61-mET" firstAttribute="top" secondItem="Lmm-er-96k" secondAttribute="top" id="WsE-K2-w8l"/>
+                            <constraint firstItem="lm5-WC-XOP" firstAttribute="top" secondItem="Lmm-er-96k" secondAttribute="top" constant="50" id="b7R-zT-1cp"/>
+                            <constraint firstItem="2jH-61-mET" firstAttribute="leading" secondItem="Lmm-er-96k" secondAttribute="leading" id="bGN-HG-43J"/>
+                            <constraint firstItem="zbG-d9-6Zp" firstAttribute="top" secondItem="lm5-WC-XOP" secondAttribute="bottom" id="j0R-0A-vml"/>
+                            <constraint firstAttribute="trailing" secondItem="2jH-61-mET" secondAttribute="trailing" id="wUz-m1-Sum"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cpc-Ku-ued"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Details" image="infoIcon" id="TiS-74-5UN"/>
                     <size key="freeformSize" width="414" height="896"/>
                     <connections>
-                        <outlet property="roundedCornersView" destination="ebe-Te-dUN" id="zFh-Lh-3MM"/>
+                        <outlet property="clickableMapViewOutlet" destination="2jH-61-mET" id="9eR-K1-yc9"/>
+                        <outlet property="eventNameLabel" destination="sfi-ss-WHh" id="0Gf-x3-H2R"/>
+                        <outlet property="eventNameViewOutlet" destination="lm5-WC-XOP" id="dH0-Rs-d5S"/>
+                        <outlet property="roundedCornersViewOutlet" destination="ebe-Te-dUN" id="zFh-Lh-3MM"/>
+                        <outlet property="scrollViewOutlet" destination="zbG-d9-6Zp" id="306-dF-Pmd"/>
+                        <outlet property="swipeIndicatorOutlet" destination="qJ0-uT-ZIL" id="KEi-Rd-cln"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="29Z-W2-AbB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -128,7 +172,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kTo-DJ-2na">
+                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kTo-DJ-2na">
                                 <rect key="frame" x="0.0" y="50" width="375" height="614"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="This is the event gallery" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIF-6H-Dcs">
@@ -144,8 +188,8 @@
                         </subviews>
                         <constraints>
                             <constraint firstItem="kTo-DJ-2na" firstAttribute="leading" secondItem="Nu5-GA-Zop" secondAttribute="leading" id="BD1-Zk-iqJ"/>
-                            <constraint firstAttribute="bottom" secondItem="kTo-DJ-2na" secondAttribute="bottom" constant="3" id="OfK-rX-tZU"/>
-                            <constraint firstItem="kTo-DJ-2na" firstAttribute="top" secondItem="Nu5-GA-Zop" secondAttribute="top" constant="50" id="UM1-XS-PPA"/>
+                            <constraint firstAttribute="bottom" secondItem="kTo-DJ-2na" secondAttribute="bottom" id="OfK-rX-tZU"/>
+                            <constraint firstItem="kTo-DJ-2na" firstAttribute="top" secondItem="Nu5-GA-Zop" secondAttribute="top" id="UM1-XS-PPA"/>
                             <constraint firstAttribute="trailing" secondItem="kTo-DJ-2na" secondAttribute="trailing" id="fSp-LD-czj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="XMq-IH-yOT"/>
